Closed Bug 1165750 Opened 9 years ago Closed 9 years ago

Metadata tag inside of clipPath results in entire group being clipped

Categories

(Core :: SVG, defect)

38 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla41
Tracking Status
firefox41 --- fixed

People

(Reporter: computerfreak97, Assigned: longsonr)

References

Details

(Keywords: regression, reproducible, testcase, Whiteboard: [parity-ie][parity-chrome][parity-opera])

Attachments

(2 files)

Attached image clippath_metadata.svg
User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/42.0.2311.135 Safari/537.36

Steps to reproduce:

Load an SVG with a metadata tag inside of a clipPath definition


Actual results:

The group the clip-path is applied to is completely hidden/clipped.


Expected results:

The clip-path should have applied to the group as defined
Thank you for the report.

Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:41.0) Gecko/20100101 Firefox/41.0
Build ID: 20150517030204
Mozilla/5.0 (X11; Linux x86_64; rv:41.0) Gecko/20100101 Firefox/41.0
Build ID: 20150517030204

HWA on or off made no difference. IE 11, Opera 29 and Chromium 41 all work.
Status: UNCONFIRMED → NEW
Component: Untriaged → SVG
Ever confirmed: true
OS: Unspecified → All
Product: Firefox → Core
Hardware: Unspecified → All
Whiteboard: [parity-ie][parity-chrome][parity-opera]
Assignee: nobody → longsonr
Blocks: 547062
Keywords: regression
Attached patch clip.txtSplinter Review
Attachment #8607000 - Flags: review?(jwatt)
Attachment #8607000 - Flags: review?(jwatt) → review+
Flags: in-testsuite+
https://hg.mozilla.org/mozilla-central/rev/8dc977b78095
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla41
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: