Bug 1165750 - metadata tag should be allowed in clipPath. r=jwatt